# Athena

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  API_KEY_MIGRATION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.simple  LICENSE  LOGGING_GUIDE.md  NEXT-SESSION.md  QUICKSTART.md  README.md  SECURITY.md  START_HERE.md  analyze-failures.js  analyze-test-failures.js  athena.sh  build-backend.sh  docker-compose.dev.yml  docker-compose.logging.yml  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.yml  failed-tests.txt  package-lock.json  package.json  performance-benchmark.js  prometheus.yml  security-tests.js  start-backend.sh  test-api-keys.js  test-comprehensive.js  test-file-upload.sh  test-output.txt  test-results.json  (+6 more)
athena-v2/src-tauri/: .taurignore  CONTAINER_SECURITY_HARDENING.md  Cargo.toml  generate_icons.py  jobs.db-shm  jobs.db-wal  tauri.conf.json
athena-v2/src-tauri/capabilities/: default.json
athena-v2/src-tauri/docs/: MEMORY_ANALYSIS_COMMANDS.md  SANDBOX_USAGE.md  SECURE_API_KEY_STORAGE.md  SECURE_STORAGE_CHANGES.md
athena-v2/src-tauri/examples/: memory_analysis_example.rs  secure_storage_example.rs
athena-v2/src-tauri/icons/: icon.icns
athena-v2/src-tauri/src/: api_server.rs  lib.rs  main.rs  quarantine.rs  secure_storage.rs  signature_verify.rs
athena-v2/src-tauri/src/ai_providers/: RETRY_IMPLEMENTATION.md  circuit_breaker.rs  claude.rs  deepseek.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  openai.rs  queue_manager.rs  retry.rs
athena-v2/src-tauri/src/cache/: mod.rs
athena-v2/src-tauri/src/commands/: advanced_analysis.rs  ai_analysis.rs  container.rs  disassembly.rs  file_analysis.rs  file_ops.rs  logging.rs  memory_analysis.rs  mod.rs  network.rs  samples.rs  sandbox_commands.rs  system.rs  system_monitor.rs  wasm_file_bridge.rs  wasm_runtime.rs  workflow.rs  yara_rules.rs  yara_scanner.rs  yara_scanner_simple.rs
athena-v2/src-tauri/src/metrics/: mod.rs
athena-v2/src-tauri/src/sandbox/: anti_evasion.rs  memory_capture.rs  mod.rs  orchestrator.rs  seccomp.rs  video_capture.rs  volatility.rs
athena-v2/src-tauri/src/threat_intel/: mod.rs  stix_parser.rs
athena-v2/src-tauri/src/workflow/: executor.rs  job_store.rs  mod.rs  schema.rs
athena-v2/src-tauri/tests/: memory_analysis_integration_test.rs
athena-v2/wasm-modules/analysis-engine/: Cargo.toml
athena-v2/wasm-modules/analysis-engine/src/: lib.rs
athena-v2/wasm-modules/core/analysis-engine/: CFG_IMPLEMENTATION.md  Cargo.toml  build.sh
athena-v2/wasm-modules/core/analysis-engine/src/: arm_disasm.rs  bindings.rs  cape_parser.rs  cfg.rs  component.rs  decompiler.rs  disasm.rs  emulator.rs  export.rs  function_analysis.rs  lib.rs  patterns.rs  ssa.rs  type_inference.rs  xrefs.rs
athena-v2/wasm-modules/core/analysis-engine/wit/: analysis-engine.wit
athena-v2/wasm-modules/core/crypto/: Cargo.toml
athena-v2/wasm-modules/core/crypto/src/: bindings.rs  component.rs  ecdsa.rs  lib.rs
athena-v2/wasm-modules/core/crypto/wit/: crypto.wit
athena-v2/wasm-modules/core/deobfuscator/: CONTROL_FLOW_FLATTENING.md  Cargo.toml
athena-v2/wasm-modules/core/deobfuscator/src/: analyzer.rs  bindings.rs  cfg_analysis.rs  chain.rs  component.rs  lib.rs  types.rs
athena-v2/wasm-modules/core/deobfuscator/wit/: deobfuscator.wit
athena-v2/wasm-modules/core/disassembler/: Cargo.toml
athena-v2/wasm-modules/core/disassembler/src/: arm_disasm.rs  bindings.rs  component.rs  disasm.rs  lib.rs
athena-v2/wasm-modules/core/disassembler/wit/: world.wit
athena-v2/wasm-modules/core/file-processor/: Cargo.toml  build.sh
athena-v2/wasm-modules/core/file-processor/src/: bindings.rs  component.rs  lib.rs  packer_detection.rs  pdb_parser.rs  types.rs  utils.rs
athena-v2/wasm-modules/core/file-processor/tests/: basic_test.rs
athena-v2/wasm-modules/core/file-processor/wit/: file-processor.wit
athena-v2/wasm-modules/core/network/: Cargo.toml
athena-v2/wasm-modules/core/network/src/: bindings.rs  component.rs  lib.rs  packet.rs  protocols.rs
athena-v2/wasm-modules/core/network/wit/: network.wit
athena-v2/wasm-modules/core/pattern-matcher/: Cargo.toml
athena-v2/wasm-modules/core/pattern-matcher/src/: bindings.rs  component.rs  engine.rs  fuzzy.rs  lib.rs  matcher.rs  rules.rs  signatures.rs  types.rs  utils.rs  yara_modules.rs
athena-v2/wasm-modules/core/pattern-matcher/wit/: pattern-matcher.wit
athena-v2/wasm-modules/core/sandbox/: CHANGES.md  Cargo.toml  IMPLEMENTATION.md
athena-v2/wasm-modules/core/sandbox/src/: bindings.rs  component.rs  executor.rs  instance.rs  lib.rs  metrics.rs  policy.rs  pool.rs
athena-v2/wasm-modules/core/sandbox/wit/: sandbox.wit
athena-v2/wasm-modules/core/security/: Cargo.toml
athena-v2/wasm-modules/core/security/src/: bindings.rs  component.rs  elf_verify.rs  lib.rs  macho_verify.rs  pe_verify.rs
athena-v2/wasm-modules/core/security/wit/: world.wit
wasm-modules/core/analysis-engine/: Cargo.toml
wasm-modules/core/analysis-engine/src/: deobfuscator.rs  lib.rs  patterns.rs
wasm-modules/core/crypto/: Cargo.toml  build.sh
wasm-modules/core/crypto/src/: aes.rs  hash.rs  hmac.rs  lib.rs  rsa.rs  utils.rs
wasm-modules/core/deobfuscator/: Cargo.toml  build.sh
wasm-modules/core/deobfuscator/src/: lib.rs  tests.rs
wasm-modules/core/deobfuscator/src/ml/: patterns.rs
wasm-modules/core/deobfuscator/src/techniques/: crypto.rs  encoding.rs  javascript.rs  powershell.rs
wasm-modules/core/file-processor/: Cargo.toml
wasm-modules/core/file-processor/src/: detector.rs  extractor.rs  lib.rs  utils.rs  validator.rs
wasm-modules/core/file-processor/tests/: basic_test.rs
wasm-modules/core/network/: Cargo.toml
wasm-modules/core/network/src/: anomaly.rs  lib.rs  packet.rs  patterns.rs  protocols.rs  utils.rs
wasm-modules/core/pattern-matcher/: Cargo.toml  build.sh
wasm-modules/core/pattern-matcher/src/: engine.rs  lib.rs  rules.rs  types.rs
wasm-modules/core/sandbox/: Cargo.toml
wasm-modules/core/sandbox/src/: executor.rs  lib.rs  monitor.rs
(+1029 files in other folders)
