[package]
name = "athena-v2"
version = "0.1.0"
description = "AI-Powered Malware Analysis Platform"
authors = ["Athena Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"
uuid = { version = "1.6", features = ["v4"] }
sysinfo = "0.31"
wasmtime = "26.0"
wasmtime-wasi = "26.0"
wasm-bindgen = "0.2"
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "athena-v2"
path = "src/main.rs"
