[package]
name = "athena-v2"
version = "0.1.0"
description = "AI-Powered Malware Analysis Platform"
authors = ["Athena Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"
uuid = { version = "1.6", features = ["v4"] }
sysinfo = "0.31"
wasmtime = { version = "37.0", features = ["component-model"] }
wasmtime-wasi = "37.0"
wasm-bindgen = "0.2"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
# Binary parsing
goblin = "0.8"
object = { version = "0.37", features = ["all"] }
# YARA scanning
yara-x = "1.8"
# Additional utilities
byteorder = "1.5"
memmap2 = "0.9"
# Hashing
md5 = "0.7"
sha1 = "0.10"
digest = "0.10"
ssdeep = "0.6"
# Additional dependencies
lazy_static = "1.5"
# Export formats
printpdf = "0.7"
xlsxwriter = "0.6"
# Compression
flate2 = "1.0"
# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
# Digital signature verification
authenticode = { version = "0.5", features = ["object", "std"] }
x509-parser = "0.16"
# Workflow persistence
rusqlite = { version = "0.32", features = ["bundled"] }
x509-cert = "0.2"
der-parser = "9.0"
der = "0.7"
sequoia-openpgp = "1.18"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "athena-v2"
path = "src/main.rs"
