[package]
name = "athena-v2"
version = "0.1.0"
description = "AI-Powered Malware Analysis Platform"
authors = ["Athena Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
# HTTP server for external API access
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"
uuid = { version = "1.19.0", features = ["v4"] }
sysinfo = "0.31"
wasmtime = { version = "38.0.3", features = ["component-model"] }
wasmtime-wasi = "38.0.3"
wasm-bindgen = "0.2"
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
# Binary parsing
goblin = "0.10.3"
object = { version = "0.37", features = ["all"] }
# YARA scanning
yara-x = "1.8.1"
# Threat Intelligence
rust-stix2 = { git = "https://github.com/oasis-open/cti-rust-stix.git" }
# Network capture and analysis
pcap = "2.0"
libc = "0.2"
pnet = "0.35"
pnet_packet = "0.35"
# Additional utilities
byteorder = "1.5"
memmap2 = "0.9"
# Hashing
md5 = "0.7"
sha1 = "0.10"
digest = "0.10"
ssdeep = "0.6"
# Additional dependencies
lazy_static = "1.5"
# Export formats
printpdf = "0.7"
xlsxwriter = "0.6"
# Compression
flate2 = "1.0"
# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
# Digital signature verification
authenticode = { version = "0.5", features = ["object", "std"] }
x509-parser = "0.16"
# Workflow persistence
rusqlite = { version = "0.32", features = ["bundled"] }
x509-cert = "0.2"
der-parser = "9.0"
der = "0.7"
sequoia-openpgp = "1.18"
dirs = "5.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Prometheus metrics with Pushgateway support (per DeepWiki for desktop apps)
prometheus = { version = "0.13", features = ["push"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Additional async utilities
futures = "0.3"
once_cell = "1.20"

# Docker container support
bollard = "0.16"
tar = "0.4"

# File type detection (magic bytes)
infer = "0.16"

[dev-dependencies]
tempfile = "3.12"

[lib]
name = "athena_v2"
path = "src/lib.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "athena-v2"
path = "src/main.rs"
