[package]
name = "athena-analysis-engine"
version = "0.1.0"
edition = "2021"
authors = ["Athena Team"]
description = "WASM analysis engine for malware detection and deobfuscation"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Security and crypto
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Pattern matching
regex = "1.10"
aho-corasick = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true