[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rsa = "0.9"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
