[package]
name = "deobfuscator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
web-sys = "0.3"
base64 = "0.22"
hex = "0.4"
url = "2.5"
flate2 = "1.0"
aes = "0.8"
sha2 = "0.10"
regex = "1.11"
once_cell = "1.20"
serde_json = "1.0"


# For performance
rayon = { version = "1.10", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
parallel = ["rayon"]

[profile.release]
opt-level = "z"
lto = true
