[package]
name = "file-processor"
version = "0.1.0"
edition = "2021"
authors = ["Athena Security Team"]
description = "WASM module for secure file parsing and content extraction"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
thiserror = "2.0"
once_cell = "1.20"

# For advanced parsing
nom = "7.1"            # Parser combinators
encoding_rs = "0.8"    # Character encoding detection

# For performance
rayon = { version = "1.10", optional = true }
rustc-hash = "2.0"  # Fast hashing, WASM-compatible

# WASM-specific dependencies
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[features]
default = ["parallel"]
parallel = ["rayon"]
debug-logs = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Optimize for size in WASM builds
[profile.wasm]
inherits = "release"
opt-level = "s"     # Optimize for size
lto = "fat"         # Full LTO
panic = "abort"     # Smaller binary

# Fix for WASM build
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }