[package]
name = "network"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
hex = "0.4"
base64 = "0.22"

# For packet parsing - using etherparse instead of pnet_packet (WASM compatible)
etherparse = "0.14"

# For DNS parsing - using simple-dns instead for WASM compatibility
simple-dns = "0.5"

# For HTTP parsing
httparse = "1.8"

# For time operations
chrono = { version = "0.4", features = ["wasmbind"] }

# Utility crates
thiserror = "1.0"
anyhow = "1.0"

# Required for WASM random number generation
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
