[package]
name = "pattern-matcher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
aho-corasick = "1.1"
regex = "1.10"
base64 = "0.22"
rustc-hash = "2.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"


[profile.release]
opt-level = 3
lto = true
