[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Athena Security Team"]
description = "WASM-based secure sandbox for malware analysis"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
opt-level = 3
lto = true
