[package]
name = "athena-deobfuscator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Component Model bindings
wit-bindgen = "0.42.1"

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"
url = "2.5"
flate2 = "1.0"
aes = "0.8"
sha2 = "0.10"
regex = "1.11"
once_cell = "1.20"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true

[package.metadata.component]
package = "athena:deobfuscator"

[package.metadata.component.target]
path = "wit"
world = "deobfuscator-component"
