[package]
name = "athena-file-processor"
version = "0.1.0"
edition = "2021"
authors = ["Athena Security Team"]
description = "WASM module for secure file parsing and content extraction"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Component Model bindings
wit-bindgen = "0.42.1"

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
thiserror = "2.0"
once_cell = "1.20"

# For advanced parsing
nom = "7.1"            # Parser combinators
encoding_rs = "0.8"    # Character encoding detection
goblin = { version = "0.10", features = ["default"] }  # Industry-standard binary format parser (PE, ELF, Mach-O)
                                                        # Includes: elf32, elf64, pe32, pe64, mach32, mach64, archive, endian_fd

# For performance
rustc-hash = "2.0"  # Fast hashing, WASM-compatible

[dev-dependencies]
criterion = "0.5"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.component]
package = "athena:file-processor"

[package.metadata.component.target]
path = "wit"
world = "file-processor-component"