[package]
name = "athena-pattern-matcher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Component Model bindings
wit-bindgen = "0.50.0"

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aho-corasick = "1.1"
regex = "1.11"
base64 = "0.22"
rustc-hash = "2.1"
strsim = "0.11"
memchr = "2.7"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10.6"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true

[package.metadata.component]
package = "athena:pattern-matcher"

[package.metadata.component.target]
path = "wit"
world = "pattern-matcher-component"
