[package]
name = "athena-sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Athena Security Team"]
description = "WASM-based secure sandbox for malware analysis"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Component Model bindings
wit-bindgen = "0.42.1"

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true

[package.metadata.component]
package = "athena:sandbox"

[package.metadata.component.target]
path = "wit"
world = "sandbox-component"
