[package]
name = "athena-security"
version = "0.1.0"
edition = "2021"
authors = ["Athena Security Team"]
description = "Security verification module for Athena - signature verification and validation"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Component Model bindings
wit-bindgen = "0.42.1"

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Security and crypto for signature verification
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"

# Binary parsing
goblin = { version = "0.10", features = ["default"] }

# PKCS#7/CMS parsing for signatures (pure Rust, WASM-compatible)
# Used for both PE Authenticode and Mach-O code signatures
cms = "0.2"
x509-cert = "0.2"
der = "0.7"
spki = "0.7"

# Signature verification (RustCrypto)
rsa = { version = "0.9", features = ["sha2"] }
signature = "2.2"
p256 = "0.13"  # ECDSA P-256
p384 = "0.13"  # ECDSA P-384

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.component]
package = "athena:security"

[package.metadata.component.target]
path = "wit"
world = "security-component"
